--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,6 @@ edition = "2018"
 
 [dependencies]
 gilrs = "0.7.4"
+#udev = "0.3.0"
 jack = "0.6"
-crossbeam-channel = "0.4.2"
+#crossbeam-channel = "0.4.2"
